# Tiralabra

./: .coveragerc  .gitignore  README.md  pyproject.toml
Dokumentaatio/: Testausdokumentti.md  kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
Dokumentaatio/Viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: ai.py  game.py  heuristic.py  main.py  ui.py
src/tests/: ai_test.py  game_test.py  heuristic_test.py
